# complete-restful-api-in-rust

./: .dockerignore  .env  Caddyfile  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.no_api.yml  docker-compose.prod.yml  docker-compose.yml  wait-for-db.sh
.github/workflows/: prod.yml
.sqlx/: query-1b02f72d531d276c6d3cf1132629e26490c12e1ae681892095894bbb308285ae.json  query-30a2d31f35017cfeb779eedd1380fea09d90ee94f0b75044fd8af90820981189.json  query-7f356a085650d1c0838ea6d0c7560677fdfdee224ab018b8b2c6616ef7f77671.json  query-83bd0b8c7fb67b1dafb2cfc8733c41f83d468aa626aef2f7a7810fbf561e1b40.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8fd6cd21bdbef653c5a921615d65656fe3592659e6babc4c057535b73481d6cb.json  query-aabd9e8f43b1371f59fe446b76917014af718ecbaf85c0292c47d18af32e030f.json  query-bb843912d2159ac1bcb8be29c65827ff5e7b6866a7d3c5ba6532488ae5962111.json  query-c4fe071a26498cdc445131cde97bf539e25ea325058ca12fec50f27f3865b3b0.json  query-d08992cf2c132fedbed21b94d545e154fa2a7a2a2bf79fd033341d1bb5a6c0f2.json  query-d538beddb3834e079b5814e31d355a7db8ace2af5126c0188c6e24d7766d9dea.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
migrations/: 20230808102331_init.down.sql  20230808102331_init.up.sql
src/: config.rs  db.rs  dtos.rs  error.rs  main.rs  models.rs
src/extractors/: auth.rs  authentication_token.rs  mod.rs
src/scopes/: auth.rs  users.rs
src/utils/: mod.rs  password.rs  test_utils.rs  token.rs
